--- a/worker/appsettings.json
+++ b/worker/appsettings.json
@@ -1,9 +1,29 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "Serilog": {
+		"MinimumLevel": "Information",
+		"Enrich": [ "FromLogContext", "WithMachineName" ],
+		"Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+		"WriteTo": [
+			{
+				"Name": "File",
+				"Args": {
+					"path": "./logs/log.txt",
+					"rollingInterval": "Day"
+				}
+			},
+			{
+				"Name": "Console"
+			}
+		]
+	},
+    "AllowedHosts": "*",
+    "ProjectManager": {
+        "BaseUrl": "http://localhost:3000"
     }
-  },
-  "AllowedHosts": "*"
 }
